--- a/15_calculator/index.html
+++ b/15_calculator/index.html
@@ -1,14 +1,23 @@
-<div xmlns="http://www.w3.org/1999/html">
-    <input value="Andrei" id="first-name" />
-</div>
-<div>
-    <input value="Pupkin" id="last-name" />
-</div>
-<div>
-    <input value="Miensk" id="address" />
-</div>
-<div>
-    <button id="send-button">Send</button>
+<div class="wierd_calculator">
+    <div class="operations-block">
+        <button>+</button>
+        <button>-</button>
+        <button>*</button>
+        <button>/</button>
+    </div>
+    <div class="separator">
+        <hr />
+    </div>
+    <div class="inputs-block">
+        <div class="input-block">
+            <label>Number 1</label>
+            <input type="number"/>
+        </div>
+        <div class="input-block">
+            <label>Number 2</label>
+            <input type="number"/>
+        </div>
+    </div>
 </div>
 
 <script src="js/index.js"></script>
