--- a/15_calculator/index.html
+++ b/15_calculator/index.html
@@ -1,9 +1,9 @@
 <div class="wierd_calculator">
     <div class="operations-block">
-        <button>+</button>
-        <button>-</button>
-        <button>*</button>
-        <button>/</button>
+        <button id="buttonPlus">+</button>
+        <button id="buttonMinus">-</button>
+        <button id="buttonMul">*</button>
+        <button id="buttonDiv">/</button>
     </div>
     <div class="separator">
         <hr />
@@ -11,11 +11,11 @@
     <div class="inputs-block">
         <div class="input-block">
             <label>Number 1</label>
-            <input type="number"/>
+            <input type="number" id="number1"/>
         </div>
         <div class="input-block">
             <label>Number 2</label>
-            <input type="number"/>
+            <input type="number" id="number2"/>
         </div>
     </div>
 </div>
